--- a/index.html
+++ b/index.html
@@ -5,19 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="stylesdemo.css">
-    <script src="./jsbasics.js"></script>
+
+    <!-- <link rel="stylesheet" href="stylesdemo.css"> -->
 </head>
 <body>
-    <div id="front">
-        hello hello
-        <div id="reciever">
-            <!-- <input type="text" placeholder="enter number" > -->
-        </div>
-        
-        <div id="displaytext"> 
-            <!-- <button type="submit">SUBMIT!!!</button> -->
-        </div>  
+    <div class="main">
+        <select class="dropdown">
+            <option value="select">--Select dept--</option>
+        </select>
     </div>
+                <script src="./jsbasics.js"></script>
+
 </body>
 </html>
