--- a/index.html
+++ b/index.html
@@ -12,9 +12,15 @@
     <div class="main">
         <select class="dropdown">
             <option value="select">--Select dept--</option>
-        </select>
+        </select
+    </div>
+    <div class="display">
+        <h1 class="title">bala</h1>
+        <button id="submit">Submit</button>
     </div>
                 <script src="./jsbasics.js"></script>
+                <script src="./jsoops.js"></script>
+                <script src="./jstest.js"></script>
 
 </body>
 </html>
