--- a/index.html
+++ b/index.html
@@ -6,21 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <!-- <link rel="stylesheet" href="stylesdemo.css"> -->
+    <link rel="stylesheet" href="stylesdemo.css">
 </head>
 <body>
-    <div class="main">
+    <!-- <div class="main">
         <select class="dropdown">
             <option value="select">--Select dept--</option>
         </select
     </div>
+
     <div class="display">
         <h1 class="title">bala</h1>
-        <button id="submit">Submit</button>
-    </div>
-                <script src="./jsbasics.js"></script>
+        <button id="submit">Submit</button> -->
+                <!-- <script src="./jsbasics.js"></script>
                 <script src="./jsoops.js"></script>
-                <script src="./jstest.js"></script>
+                <script src="./jstest.js"></script> -->
+                <script src="./javascript.js/asynchoronous.js"></script>
+              
+                </div>
+        
 
 </body>
 </html>
