--- a/index.html
+++ b/index.html
@@ -2,29 +2,50 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./stylesdemo.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <title>Document</title>
-
-    <link rel="stylesheet" href="stylesdemo.css">
 </head>
 <body>
-    <!-- <div class="main">
-        <select class="dropdown">
-            <option value="select">--Select dept--</option>
-        </select
+     <!-- dashbaord page -->
+        <div class="dashboard">
+            <!-- title -->
+            <div class="title">
+                <h1>The voice.</h1>
+            </div>
+            <!-- saved & recent buttons -->
+            <div class="news-type">
+                <button>saved news</button>
+                <button>recent news</button>
+            </div>
     </div>
+   
+    <div class="category-bar">
+        <button data-category="All" class="category All">All</button>
+        <button data-category="business" class="category business">business</button>
+        <button data-category="sports" class="category sports">sports</button>
+        <button data-category="world" class="category world">world</button>
+        <button data-category="politics" class="category politics">politics</button>
+        <button data-category="business" class="category hatke">hatke</button>
+        <button data-category="business" class="category science">science</button>
+     </div>
 
-    <div class="display">
-        <h1 class="title">bala</h1>
-        <button id="submit">Submit</button> -->
-                <!-- <script src="./jsbasics.js"></script>
-                <script src="./jsoops.js"></script>
-                <script src="./jstest.js"></script> -->
-                <script src="./javascript.js/asynchoronous.js"></script>
-              
-                </div>
-        
-
+     <div class="news-bar">
+        <!-- <div class="news-item">
+            <div class="news-title">
+                <p>by arjun</p>
+                <p>category politics</p>
+            </div>
+            <div class="news-content">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus,
+                dolores sapiente quae consectetur sint laboriosam possimus vitae officiis 
+                deserunt impedit eaque dolorum,
+                 pariatur illum recusandae, inventore autem dignissimos similique animi?
+            <a href="">Read More</a></div>
+            <i class="fa-regular fa-heart"></i>
+        </div> -->
+     </div>
+    <script src="./jstest.js"></script>
 </body>
 </html>
