--- a/newsapp/index.html
+++ b/newsapp/index.html
@@ -6,7 +6,6 @@
     <title>news web APP</title>
     <link rel="stylesheet" href="styles2.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
-    
   </head>
 <body>
     <nav>
@@ -71,7 +70,7 @@
               <option class="option" value="ru">&#x1F1F7;&#x1F1FA; Russia</option>
               <option class="option" value="sa">&#x1F1F8;&#x1F1E6; Saudi Arabia</option>
               <option class="option" value="se">&#x1F1F8;&#x1F1EA; Sweden</option>
-              <option class="option" value="sg">&#x1F1F8;&#x1F1EC; Singapore</option>
+            <option class="option" value="sg">&#x1F1F8;&#x1F1EC; Singapore</option>
               <option class="option" value="sk">&#x1F1F8;&#x1F1F0; Slovakia</option>
               <option class="option" value="th">&#x1F1F9;&#x1F1ED; Thailand</option>
               <option class="option" value="tr">&#x1F1F9;&#x1F1F7; Turkey</option>
@@ -97,34 +96,33 @@
             </form>    
         </div>
 
-        <div class="grid-container">
-          <div class="grid-item"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/41/The_Indianapolis_Star%2C_2011.jpg/1200px-The_Indianapolis_Star%2C_2011.jpg" alt=""><p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p></div>      
-          <div class="grid-item"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/41/The_Indianapolis_Star%2C_2011.jpg/1200px-The_Indianapolis_Star%2C_2011.jpg" alt=""><p>4</p></div>
-          <div class="grid-item"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/41/The_Indianapolis_Star%2C_2011.jpg/1200px-The_Indianapolis_Star%2C_2011.jpg" alt=""><p>5</p></div>
-          <div class="grid-item"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/41/The_Indianapolis_Star%2C_2011.jpg/1200px-The_Indianapolis_Star%2C_2011.jpg" alt=""><p>6</p></div>
-          <div class="grid-item"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/41/The_Indianapolis_Star%2C_2011.jpg/1200px-The_Indianapolis_Star%2C_2011.jpg" alt=""><p>7</p></div>
-        </div>
-
   <div class="newsbar">
 <div class="newsbar-title-1">
   <h3 >Top News</h3>
 </div>
 <div class="mainnews">
  <div class="maincards">
-  <img src="./politicsimg.avif" alt="">
+  <img src="./techimage.avif" alt="">
+  <div class="para-1">
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+  </div>
+  
  </div>
   <div class="subcards">
     <div class="subcard">
-      <img src="./politicsimg.avif" alt="">
+      <img src="./techimage.avif" alt="">
+      <div class="para">
+       <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis molestiae sint aliquid ad suscipit voluptas doloremque fugit itaque illo natus</p>
+      </div>
     </div>
     <div class="subcard">
-      <img src="./politicsimg.avif" alt="">
+      <img src="./techimage.avif" alt="">
     </div>
     <div class="subcard">
-      <img src="./politicsimg.avif" alt="">
+      <img src="./techimage.avif" alt="">
     </div>
     <div class="subcard">
-      <img src="./politicsimg.avif" alt="">
+      <img src="./techimage.avif" alt="">
     </div>
     <div class="subcard">
       <img src="./politicsimg.avif" alt="">
@@ -159,7 +157,43 @@
 </div>
 
 </div>
-</div>
+<!-- box-shadow: 0 40px 70px rgba(236,217,28,0.5) -->
+<!-- category cards -->
+<div class="categorycards">
+  <div class="category-title">
+    <h3>Business</h3>
+  </div>
+  <div class="categorycardsdsply">
+    <div class="categorycard">
+      <div class="categoryimg"></div>
+      <div class="categorycontent">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur molestiae veniam recusandae dicta provident, ipsum cum corrupti, fugit inventore blanditiis asperiores eaque qu
+       dolores eius odio facere, expedita officia qui.</div>
+    </div>
+    <div class="categorycard">
+      <div class="categoryimg">
+        <img src="./politicsimg.avif" alt="">
+      </div>
+      <div class="categorycontent">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur molestiae veniam recusandae dicta provident, ipsum cum corrupti, fugit inventore blanditiis asperiores eaque qu
+        dolores eius odio facere, expedita officia qui.</div>
+      </div>
+      <div class="categorycard">
+        <div class="categoryimg"></div>
+        <div class="categorycontent">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur molestiae veniam recusandae dicta provident, ipsum cum corrupti, fugit inventore blanditiis asperiores eaque qu
+          dolores eius odio facere, expedita officia qui.</div>
+        </div>
+        <div class="categorycard">
+          <div class="categoryimg"></div>
+          <div class="categorycontent">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur molestiae veniam recusandae dicta provident, ipsum cum corrupti, fugit inventore blanditiis asperiores eaque qu
+            dolores eius odio facere, expedita officia qui.</div>
+          </div>
+          <div class="categorycard">
+            <div class="categoryimg"></div>
+            <div class="categorycontent">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur molestiae veniam recusandae dicta provident, ipsum cum corrupti, fugit inventore blanditiis asperiores eaque qu
+              dolores eius odio facere, expedita officia qui.</div>
+            </div>
+      </div>
+    </div>
+    <!-- footer styles -->
 <div class="footer">
 
 </div>
